SAAS-1087 - fix DJ list overflow + styling

--- a/airtime_mvc/public/css/add-show.css
+++ b/airtime_mvc/public/css/add-show.css
@@ -113,20 +113,27 @@ label.wrapp-label input[type="checkbox"] {
     display: none;
 }
 
+#add_show_hosts-label {
+    width: 100%;
+    padding-bottom: 10px;
+}
+
 #add_show_hosts-element {
     max-height: 80px;
     min-width: 150px;
 }
 
 #add_show_hosts-element > label {
-    margin: 0 0 6px 5px;
-    vertical-align: middle;
     display: flex;
     align-items: flex-end;
 }
 
 #add_show_hosts-element input {
     margin-right: 6px;
+}
+
+#schedule-show-who {
+    overflow-x: hidden;
 }
 
 #add_show_logo {
